OPA-Examples/Deny-Latest-Image-Tag/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sLatestImage
metadata:
  name: k8slatestimage
spec:
  enforcementAction: deny
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pods"]
  parameters:
    message: "WHY DID YOU TRY!!"
