OPA-Examples/Deny-Latest-Image-Tag/template.yaml
apiVersion: templates.gatekeeper.sh/v1beta1
kind: ConstraintTemplate
metadata:
  name: k8slatestimage
spec:
  crd:
    spec:
      names:
        kind: K8sLatestImage
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          properties:
            message:
              type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8slatestimage

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          not startswith(container.image, "docker.io")
          msg := sprintf("Image %v for container %v comes from disallowed registry, must be docker.io/", [container.image, container.name])
        }

        violation[{"msg": msg}] {
          container := input.review.object.spec.containers[_]
          endswith(container.image, ":latest")
          msg := sprintf("Image %v for container %v has disallowed latest tag", [container.image, container.name])
        }
